[package]
name = "vizwasm"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
serde = "1.0.217"
serde_json = "1.0.136"
syn = "2.0.95"

[dependencies.sdlrig]
#git = "https://github.com/Blood-Bank-Global/sdlrig.git"
path = "../sdlrig"